(client) Use virtual threads in a few more clients